<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_count_timer"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_to_simple_count_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_to_simple_count_timer"/>

    <Button
        android:id="@+id/btn_start"
        style="@style/button"
        android:text="@string/btn_start"/>

    <Button
        android:id="@+id/btn_pause"
        style="@style/button"
        android:text="@string/btn_pause"/>

    <Button
        android:id="@+id/btn_cancel"
        style="@style/button"
        android:text="@string/btn_cancel"/>

    <Button
        android:id="@+id/btn_restart"
        style="@style/button"
        android:text="@string/btn_restart"/>
</LinearLayout>
